💄 gap and sizing fixups

--- a/src/front-end/styles/index.less
+++ b/src/front-end/styles/index.less
@@ -104,15 +104,15 @@ label {
 	--tog-c-back: var(--color-bg);
 	--tog-c-back-on: var(--color-bg);
 	--tog-c-dim: calc(var(--tog-height) - (var(--tog-c-offset) * 2));
-	--tog-c-offset: .125rem;
-	--tog-height: 1rem;
+	--tog-c-offset: var(--space-xs);
+	--tog-height: var(--space-l);
 	--tog-off: var(--color-fg);
 	--tog-on: var(--color-fg);
-	--tog-width: 1.75rem;
+	--tog-width: var(--space-xxl);
 	display: inline-block;
 	height: var(--tog-height);
 	position: relative;
-	top: .1rem;
+	top: var(--space-xs);
 	width: var(--tog-width);
 }
 .tog i {
